fix code scroll , z-index select province modal and nav

--- a/src/Components/Heade/CSS/Header.css
+++ b/src/Components/Heade/CSS/Header.css
@@ -14,6 +14,15 @@ header nav {
   outline: none;
   z-index: 2;
 }
+.nav-zIndex {
+  width: inherit;
+  height: inherit;
+  background-color: #ffffff;
+  position: fixed;
+  border: none;
+  outline: none;
+  z-index: -10;
+}
 
 .Head-search[type="text"] {
   width: 664px;
@@ -358,12 +367,13 @@ header nav {
   position: fixed;
   top: 80px;
   left: 0;
-  z-index: -1;
+  z-index: 2;
   background-color: #ffffff;
   box-shadow: -5px 7px 8px rgb(0, 0, 0, 0.04);
   overflow: visible;
   background-color: rgb(255, 255, 255);
 }
+
 #bottomNavbar .box-menus {
   width: 60%;
   height: inherit;
@@ -388,4 +398,3 @@ header nav {
   transition: all 0.8s ease-in-out;
   overflow: hidden;
 }
-
